# GameEngine-C-OpenGL

./: CMakeLists.txt
src/: main.cpp
src/Misc/: Misc.cpp  Misc.h
src/Screen/: Layer.cpp  Layer.h  Screen.cpp  Screen.h
